--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fashion App</title>
-    <link rel="assetlinks.json file" href="https://www.getreadyfast.shop/.well-known/assetlinks.json" />
-
+    <link rel="assetlinks.json file" href="%PUBLIC_URL%/.well-known/assetlinks.json" />
+<link rel="apple-app-site-association file" href="%PUBLIC_URL%/.well-known/apple-app-site-association" />
   </head>
   <body>
     <div id="root"></div>
